# Fluent-Python

./: README.md
cards/: README.md  pyproject.toml
cards/src/: main.py
cards/src/cards/: __init__.py
notes/Fluent Python/: Chapter 1 - The Python Data Model.md
notes/Fluent Python/.obsidian/: appearance.json  workspace.json
vector-2d/: README.md  pyproject.toml
vector-2d/src/: main.py
vector-2d/src/vector_2d/: __init__.py
