[project]
name = "vector-2d"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KaranLMungra", email = "klmungra23@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.7"

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
